--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "postcss": "^8.0.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "tailwind": "^4.0.0"
+    "tailwindcss": "^3.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
