--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "tailwindcss": "^3.2.4"
   },
   "scripts": {
+    "build:tailwind": "tailwindcss build src/tailwind.css -o src/tailwind.generated.css",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
